# cairn

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  account-features-plan.md
src/: config.rs  error.rs  lib.rs  main.rs
src/admin/: handlers.rs  mod.rs  templates.rs
src/assets/: handlers.rs
src/auth/: handlers.rs  jwt.rs  mod.rs  oauth.rs  templates.rs  types.rs
src/db/: mod.rs
src/db/migrations/: 001_users.sql  002_oauth_accounts.sql  003_invite_codes.sql  004_sketches.sql  005_routes.sql  006_shares.sql  007_public_links.sql  008_sync_log.sql  009_refresh_tokens.sql  010_assets.sql
src/export/: handlers.rs
src/invite/: generator.rs  handlers.rs  mod.rs
src/middleware/: admin.rs  auth.rs  mod.rs  rate_limit.rs
src/routes/: handlers.rs
src/sharing/: handlers.rs
src/sketches/: handlers.rs
src/sync/: handlers.rs
templates/admin/: invite_create_form.html  invite_form.html  invite_list.html  invite_list_rows.html  invite_row.html  login.html  page.html  stats.html  user_form.html  user_list.html  user_list_rows.html  user_row.html
templates/auth/: logged_out.html
tests/: README.md  auth_and_sketch_tests.rs  auth_tests.rs  common.rs  invite_tests.rs  route_tests.rs  security_tests.rs  sketch_tests.rs  sync_tests.rs
