[package]
name = "cairn"
version = "0.1.0"
edition = "2024"

[lib]
name = "cairn"
path = "src/lib.rs"

[[bin]]
name = "cairn"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros", "multipart"] }
bcrypt = "0.18.0"
chrono = { version = "0.4.43", features = ["serde"] }
config = "0.15.19"
cookie = "0.18.1"
dotenvy = "0.15.7"
hex = "0.4.3"
http-body-util = "0.1"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
once_cell = "1.21.3"
rand = "0.10.0"
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "compression-br", "compression-deflate", "compression-gzip", "compression-zstd", "limit"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
askama = "0.13"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
mime = "0.3"
